# calibrated-mlops-pipeline

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
configs/: dropout.yaml  fraud.yaml  readmission.yaml
data/: README.md
docs/: glosario.md  podman-vs-docker.md  referencia-codigo.md  vision-tecnica.md
scripts/: download_data.sh  download_education.py  download_health.py  generate_synthetic.py  run_pipeline.py
src/mlops_core/: __init__.py  config.py  spark.py
src/mlops_core/drift/: __init__.py  detector.py
src/mlops_core/evaluate/: __init__.py  metrics.py
src/mlops_core/features/: __init__.py  build.py
src/mlops_core/ingest/: __init__.py  spark_etl.py
src/mlops_core/models/: __init__.py  bayesian.py  calibrate.py  calibrated_model.py  train.py
src/mlops_core/schemas/: __init__.py  dropout.py  fraud.py  readmission.py
src/mlops_core/serve/: __init__.py  api.py  schemas.py
src/mlops_core/validate/: __init__.py  runner.py
tests/: conftest.py  test_api.py  test_calibrate.py  test_config.py  test_drift.py  test_dropout.py  test_features.py  test_ingest_spark.py  test_metrics.py  test_pipeline.py  test_readmission.py  test_schema.py  test_train.py  test_validate.py
