[project]
name = "mlops-core"
version = "0.1.0"
description = "Pipeline de MLOps de extremo a extremo: ingesta validada, probabilidades calibradas y monitoreo de drift. Núcleo reutilizable multi-dominio (banca/salud/educación)."
readme = "README.md"
requires-python = ">=3.12,<3.13"
authors = [{ name = "Felipe Mjaque" }]
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15",
    "pyspark>=3.5",
    "lightgbm>=4.3",
    "scikit-learn>=1.4",
    "scipy>=1.12",
    "pandera>=0.20",
    "mlflow>=2.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.1",
    "ruff>=0.4",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mlops_core"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
